Fixing misaligned solver action buttons.
git-svn-id: https://svn.divms.uiowa.edu/repos/clc/projects/starexec/dev/branches/fb1/starexec@22618 bd178f5f-7bea-4014-844f-495ca19b8805

--- a/WebContent/css/details/shared.css
+++ b/WebContent/css/details/shared.css
@@ -18,12 +18,6 @@ fieldset {
 	font-family: monospace;
 }
 
-#downLink3 {
-	float: right;
-	margin-right: 185px;
-}
-
-
 #dialog-show-anonymous-link a {
 	color: #0000EE;
 	text-decoration: underline;
@@ -38,11 +32,6 @@ fieldset {
 .caption {
 	font-size: 12px;
 	margin-top: 10px;
-}
-
-#uploadConfig {
-	float: right;
-	margin-right: 10px;
 }
 
 #uploadConfigMargin {
@@ -135,7 +124,7 @@ fieldset {
 #actions a {
 	margin-left: 8px;
 	margin-right: 8px;
-	
+	margin-bottom: 10px;
 }
 
 #options ul{
